# case-resolution-rag

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  demo_page.py  main.py
app/domain/: __init__.py  models.py
app/middleware/: request_context.py
app/services/: audit_repository.py  audit_repository_factory.py  demo_seed.py  embeddings.py  evaluation.py  investigation.py  logging_config.py  pgvector_store.py  policy_retrieval.py  policy_retrieval_factory.py  policy_vector_store.py  provider.py  store.py  timeline.py
case_resolution_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  data-card.md  demo-script.md  evaluation.md  future-plan.md  roadmap.md
migrations/: env.py
migrations/versions/: 0001_create_investigation_audit_tables.py
scripts/: check_eval_thresholds.py
tests/: __init__.py  conftest.py  test_api.py  test_audit_repository.py  test_domain_flow.py  test_pgvector_store.py
